--- a/activitidemo/src/main/resources/application.properties
+++ b/activitidemo/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=activitidemo
 server.port=8082
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://222.200.180.59:3306/activiti_demo?characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=workflow
+spring.datasource.url=jdbc:mysql://XXX:3306/activiti_demo?characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=XXX
+spring.datasource.password=XXXX
 
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
